k8s/notejam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websitesam
  namespace: notejam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: websitesam
  template:
    metadata:
      labels:
        app: websitesam
    spec:
      containers:
        - name: websitesam
          # image from dockerhub
          image: $(image)
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: websitesam
spec:
  ports:
  - port: 80
  selector:
    app: websitesam
